Added Dto mapping. Created custom Exception middleware for 500 status. Implemented Employees controller.

--- a/Contracts/Contracts.csproj
+++ b/Contracts/Contracts.csproj
@@ -7,4 +7,7 @@
     <ItemGroup>
       <Folder Include="SpecificRepositoryInterfaces\" />
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Entities\Entities.csproj" />
+    </ItemGroup>
 </Project>
