--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -7,8 +7,11 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Configuration\" />
+    <Folder Include="DataTransferObjects\" />
+    <Folder Include="ErrorModel\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
+    <PackageReference Include="Json.Net" Version="1.0.33" />
   </ItemGroup>
 </Project>
