Implemented POST and DELETE actions. Also, created get action which retrieve a string with Ids and response the multiple guid collection. Created Custom ModelBinder. Implemented Dtos for created. Added support response xml format. Created custom csv formatter for output (response) data.

--- a/UltimateWebApi/UltimateWebApi.csproj
+++ b/UltimateWebApi/UltimateWebApi.csproj
@@ -23,6 +23,8 @@
 
     <ItemGroup>
       <Folder Include="internal_logs" />
+      <Folder Include="Csv\" />
+      <Folder Include="ModelBinders\" />
     </ItemGroup>
 
 </Project>
