--- a/UltimateWebApi/UltimateWebApi.csproj
+++ b/UltimateWebApi/UltimateWebApi.csproj
@@ -12,6 +12,8 @@
           <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+        <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.7" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.7" />
     </ItemGroup>
 
     <ItemGroup>
