--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -11,6 +11,7 @@
     <Folder Include="ErrorModel\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
     <PackageReference Include="Json.Net" Version="1.0.33" />
   </ItemGroup>
