--- a/UltimateWebApi/appsettings.json
+++ b/UltimateWebApi/appsettings.json
@@ -8,7 +8,8 @@
     }
   },
   "ConnectionStrings": {
-    "SqlConnection": "Server=localhost,1433;User Id=sa;Password=Admin123!;Database=CompanyEmployee;"
+    "SqlConnection2": "Server=localhost,1433;User Id=sa;Password=Admin123!;Database=CompanyEmployee;",
+    "SqlConnection": "Server=db,1433;User=sa;Password=Admin123!;Database=CompanyEmployee;" /* connection for sql docker container */
   },
   "JwtSettings": {
     "ValidIssuer": "UltimateWebAPI",
